--- a/app/views/projects/articles.html.erb
+++ b/app/views/projects/articles.html.erb
@@ -18,6 +18,8 @@
             <div class="row">
               <div class="col-md-12">
                 <h1>Готовые статьи</h1>
+
+                <!-- Фильтр по категориям
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
                     <form class="form-horizontal" role="form">
@@ -36,7 +38,7 @@
 
 
                   </div>
-                </div>
+                </div> -->
                 <br>
 
                 <% @posts.each do |post| %>
