--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -168,7 +168,7 @@
                       </div>
 
                       <div class="profile-info-row">
-                        <div class="profile-info-name"> Дата регистрации </div>
+                        <div class="profile-info-name"> Регистрация </div>
 
                         <div class="profile-info-value">
                           <span><%= Russian::strftime(@user.created_at, "%d %B %Y") %></span>
