--- a/app/views/copyrighters/complite.html.erb
+++ b/app/views/copyrighters/complite.html.erb
@@ -20,7 +20,7 @@
                 <h1>Выполненные заказы</h1>
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
-
+                    <% if @posts.count > 0 %>
                 <table class="table table-hover">
                   <thead>
                     <tr>
@@ -51,7 +51,9 @@
                     <% end %>
                   </tbody>
                 </table>
-
+                <% else %>
+                <strong>У Вас нет выполненных заказов.</strong>
+                <% end %>
                   </div>
                 </div>
               </div>
