Start to work with admin

--- a/app/views/shared/_whatmenu.html.erb
+++ b/app/views/shared/_whatmenu.html.erb
@@ -1,7 +1,7 @@
-<% if current_user.role == "client" %>
+<% if current_user && current_user.role == "client" %>
     <%= render "clients/leftmenu" %>
-  <% elsif current_user.role == "copy" %>
+  <% elsif current_user && current_user.role == "copy" %>
     <%= render "copyrighters/leftmenu" %>
-  <% elsif current_user.role == "admin" %>
+  <% elsif current_user && current_user.role == "admin" %>
     <%= render "admins/leftmenu" %>
 <% end %>
