--- a/app/views/clients/work.html.erb
+++ b/app/views/clients/work.html.erb
@@ -13,7 +13,7 @@
   <section>
       <div class="container">
         <div class="row">
-<%= render "leftmenu" %>
+<%= render "/shared/whatmenu" %>
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-12">
